--- a/client/src/components/style/Player.css
+++ b/client/src/components/style/Player.css
@@ -244,9 +244,7 @@ select {
   appearance: none;
   font-size: 14px;
 }
-.player-controls-chapter-select {
 
-}
 select:focus {
   outline: none;
 }
